--- a/reference/MallFrame.qmd
+++ b/reference/MallFrame.qmd
@@ -1,15 +1,12 @@
-# MallFrame { #mall.MallFrame }
+# MallFrame {#mall.MallFrame}
 
-```python
+``` python
 MallFrame(df)
 ```
 
-Extension to Polars that add ability to use
-an LLM to run batch predictions over a data frame
+Extension to Polars that add ability to use an LLM to run batch predictions over a data frame
 
-We will start by loading the needed libraries, and
-set up the data frame that will be used in the
-examples:
+We will start by loading the needed libraries, and set up the data frame that will be used in the examples:
 
 ```{python}
 #| output: false
@@ -20,13 +17,13 @@ pl.Config.set_tbl_hide_dataframe_shape(True)
 pl.Config.set_tbl_hide_column_data_types(True)
 data = mall.MallData
 reviews = data.reviews
-reviews.llm.use(options = dict(seed = 100))
+reviews.llm.use("ollama", model =  "llama3.2")
 ```
 
 ## Methods
 
 | Name | Description |
-| --- | --- |
+|------------------------------------|------------------------------------|
 | [classify](#mall.MallFrame.classify) | Classify text into specific categories. |
 | [custom](#mall.MallFrame.custom) | Provide the full prompt that the LLM will process. |
 | [extract](#mall.MallFrame.extract) | Pull a specific label from the text. |
@@ -36,9 +33,9 @@ reviews.llm.use(options = dict(seed = 100))
 | [use](#mall.MallFrame.use) | Define the model, backend, and other options to use to |
 | [verify](#mall.MallFrame.verify) | Check to see if something is true about the text. |
 
-### classify { #mall.MallFrame.classify }
+### classify {#mall.MallFrame.classify}
 
-```python
+``` python
 MallFrame.classify(col, labels='', additional='', pred_name='classify')
 ```
 
@@ -46,12 +43,12 @@ Classify text into specific categories.
 
 #### Parameters {.doc-section .doc-section-parameters}
 
-| Name       | Type   | Description                                                                                                             | Default      |
-|------------|--------|-------------------------------------------------------------------------------------------------------------------------|--------------|
-| col        | str    | The name of the text field to process                                                                                   | _required_   |
-| labels     | list   | A list or a DICT object that defines the categories to classify the text as. It will return one of the provided labels. | `''`         |
-| pred_name  | str    | A character vector with the name of the new column where the prediction will be placed                                  | `'classify'` |
-| additional | str    | Inserts this text into the prompt sent to the LLM                                                                       | `''`         |
+| Name | Type | Description | Default |
+|---------|---------|---------------------------------------------|---------|
+| col | str | The name of the text field to process | *required* |
+| labels | list | A list or a DICT object that defines the categories to classify the text as. It will return one of the provided labels. | `''` |
+| pred_name | str | A character vector with the name of the new column where the prediction will be placed | `'classify'` |
+| additional | str | Inserts this text into the prompt sent to the LLM | `''` |
 
 #### Examples {.doc-section .doc-section-examples}
 
@@ -69,9 +66,9 @@ reviews.llm.classify("review", ["appliance", "computer"], pred_name="prod_type")
 reviews.llm.classify("review", {"appliance" : "1", "computer" : "2"})
 ```
 
-### custom { #mall.MallFrame.custom }
+### custom {#mall.MallFrame.custom}
 
-```python
+``` python
 MallFrame.custom(col, prompt='', valid_resps='', pred_name='custom')
 ```
 
@@ -79,11 +76,11 @@ Provide the full prompt that the LLM will process.
 
 #### Parameters {.doc-section .doc-section-parameters}
 
-| Name      | Type   | Description                                                                            | Default    |
-|-----------|--------|----------------------------------------------------------------------------------------|------------|
-| col       | str    | The name of the text field to process                                                  | _required_ |
-| prompt    | str    | The prompt to send to the LLM along with the `col`                                     | `''`       |
-| pred_name | str    | A character vector with the name of the new column where the prediction will be placed | `'custom'` |
+| Name | Type | Description | Default |
+|----------|----------|-------------------------------------------|----------|
+| col | str | The name of the text field to process | *required* |
+| prompt | str | The prompt to send to the LLM along with the `col` | `''` |
+| pred_name | str | A character vector with the name of the new column where the prediction will be placed | `'custom'` |
 
 #### Examples {.doc-section .doc-section-examples}
 
@@ -98,9 +95,9 @@ my_prompt = (
 reviews.llm.custom("review", prompt = my_prompt)
 ```
 
-### extract { #mall.MallFrame.extract }
+### extract {#mall.MallFrame.extract}
 
-```python
+``` python
 MallFrame.extract(
     col,
     labels='',
@@ -114,12 +111,12 @@ Pull a specific label from the text.
 
 #### Parameters {.doc-section .doc-section-parameters}
 
-| Name       | Type   | Description                                                                            | Default     |
-|------------|--------|----------------------------------------------------------------------------------------|-------------|
-| col        | str    | The name of the text field to process                                                  | _required_  |
-| labels     | list   | A list or a DICT object that defines tells the LLM what to look for and return         | `''`        |
-| pred_name  | str    | A character vector with the name of the new column where the prediction will be placed | `'extract'` |
-| additional | str    | Inserts this text into the prompt sent to the LLM                                      | `''`        |
+| Name | Type | Description | Default |
+|----------|----------|------------------------------------------|----------|
+| col | str | The name of the text field to process | *required* |
+| labels | list | A list or a DICT object that defines tells the LLM what to look for and return | `''` |
+| pred_name | str | A character vector with the name of the new column where the prediction will be placed | `'extract'` |
+| additional | str | Inserts this text into the prompt sent to the LLM | `''` |
 
 #### Examples {.doc-section .doc-section-examples}
 
@@ -158,9 +155,9 @@ reviews.llm.extract(
     )
 ```
 
-### sentiment { #mall.MallFrame.sentiment }
+### sentiment {#mall.MallFrame.sentiment}
 
-```python
+``` python
 MallFrame.sentiment(
     col,
     options=['positive', 'negative', 'neutral'],
@@ -173,12 +170,12 @@ Use an LLM to run a sentiment analysis
 
 #### Parameters {.doc-section .doc-section-parameters}
 
-| Name       | Type         | Description                                                                            | Default                               |
-|------------|--------------|----------------------------------------------------------------------------------------|---------------------------------------|
-| col        | str          | The name of the text field to process                                                  | _required_                            |
-| options    | list or dict | A list of the sentiment options to use, or a named DICT object                         | `['positive', 'negative', 'neutral']` |
-| pred_name  | str          | A character vector with the name of the new column where the prediction will be placed | `'sentiment'`                         |
-| additional | str          | Inserts this text into the prompt sent to the LLM                                      | `''`                                  |
+| Name | Type | Description | Default |
+|-------------|-------------|----------------------------------|-------------|
+| col | str | The name of the text field to process | *required* |
+| options | list or dict | A list of the sentiment options to use, or a named DICT object | `['positive', 'negative', 'neutral']` |
+| pred_name | str | A character vector with the name of the new column where the prediction will be placed | `'sentiment'` |
+| additional | str | Inserts this text into the prompt sent to the LLM | `''` |
 
 #### Examples {.doc-section .doc-section-examples}
 
@@ -201,9 +198,9 @@ reviews.llm.sentiment("review", ["positive", "negative"])
 reviews.llm.sentiment("review", {"positive" : 1, "negative" : 0})
 ```
 
-### summarize { #mall.MallFrame.summarize }
+### summarize {#mall.MallFrame.summarize}
 
-```python
+``` python
 MallFrame.summarize(col, max_words=10, additional='', pred_name='summary')
 ```
 
@@ -211,12 +208,12 @@ Summarize the text down to a specific number of words.
 
 #### Parameters {.doc-section .doc-section-parameters}
 
-| Name       | Type   | Description                                                                            | Default     |
-|------------|--------|----------------------------------------------------------------------------------------|-------------|
-| col        | str    | The name of the text field to process                                                  | _required_  |
-| max_words  | int    | Maximum number of words to use for the summary                                         | `10`        |
-| pred_name  | str    | A character vector with the name of the new column where the prediction will be placed | `'summary'` |
-| additional | str    | Inserts this text into the prompt sent to the LLM                                      | `''`        |
+| Name | Type | Description | Default |
+|----------|----------|------------------------------------------|----------|
+| col | str | The name of the text field to process | *required* |
+| max_words | int | Maximum number of words to use for the summary | `10` |
+| pred_name | str | A character vector with the name of the new column where the prediction will be placed | `'summary'` |
+| additional | str | Inserts this text into the prompt sent to the LLM | `''` |
 
 #### Examples {.doc-section .doc-section-examples}
 
@@ -230,9 +227,9 @@ reviews.llm.summarize("review", max_words = 5)
 reviews.llm.summarize("review", 5, pred_name = "review_summary")
 ```
 
-### translate { #mall.MallFrame.translate }
+### translate {#mall.MallFrame.translate}
 
-```python
+``` python
 MallFrame.translate(col, language='', additional='', pred_name='translation')
 ```
 
@@ -240,12 +237,12 @@ Translate text into another language.
 
 #### Parameters {.doc-section .doc-section-parameters}
 
-| Name       | Type   | Description                                                                            | Default         |
-|------------|--------|----------------------------------------------------------------------------------------|-----------------|
-| col        | str    | The name of the text field to process                                                  | _required_      |
-| language   | str    | The target language to translate to. For example 'French'.                             | `''`            |
-| pred_name  | str    | A character vector with the name of the new column where the prediction will be placed | `'translation'` |
-| additional | str    | Inserts this text into the prompt sent to the LLM                                      | `''`            |
+| Name | Type | Description | Default |
+|-----------|-----------|-----------------------------------------|-----------|
+| col | str | The name of the text field to process | *required* |
+| language | str | The target language to translate to. For example 'French'. | `''` |
+| pred_name | str | A character vector with the name of the new column where the prediction will be placed | `'translation'` |
+| additional | str | Inserts this text into the prompt sent to the LLM | `''` |
 
 #### Examples {.doc-section .doc-section-examples}
 
@@ -257,33 +254,34 @@ reviews.llm.translate("review", "spanish")
 reviews.llm.translate("review", "french")
 ```
 
-### use { #mall.MallFrame.use }
+### use {#mall.MallFrame.use}
 
-```python
+``` python
 MallFrame.use(backend='', model='', _cache='_mall_cache', **kwargs)
 ```
 
-Define the model, backend, and other options to use to
-interact with the LLM.
+Define the model, backend, and other options to use to interact with the LLM.
 
 #### Parameters {.doc-section .doc-section-parameters}
 
-| Name     | Type                  | Description                                                                                                                                                                                | Default         |
-|----------|-----------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------|
-| backend  | str \| Chat \| Client | The name of the backend to use, or an Ollama Client object, or a `chatlas` Chat object. At the beginning of the session it defaults to "ollama". If passing `""`, it will remain unchanged | `''`            |
-| model    | str                   | The name of the model tha the backend should use. At the beginning of the session it defaults to "llama3.2". If passing `""`, it will remain unchanged                                     | `''`            |
-| _cache   | str                   | The path of where to save the cached results. Passing `""` disables the cache                                                                                                              | `'_mall_cache'` |
-| **kwargs |                       | Arguments to pass to the downstream Python call. In this case, the `chat` function in `ollama`                                                                                             | `{}`            |
+| Name | Type | Description | Default |
+|---------|---------|---------------------------------------------|---------|
+| backend | str \| Chat \| Client | The name of the backend to use, or an Ollama Client object, or a `chatlas` Chat object. At the beginning of the session it defaults to "ollama". If passing `""`, it will remain unchanged | `''` |
+| model | str | The name of the model tha the backend should use. At the beginning of the session it defaults to "llama3.2". If passing `""`, it will remain unchanged | `''` |
+| \_cache | str | The path of where to save the cached results. Passing `""` disables the cache | `'_mall_cache'` |
+| \*\*kwargs |  | Arguments to pass to the downstream Python call. In this case, the `chat` function in `ollama` | `{}` |
 
 #### Examples {.doc-section .doc-section-examples}
 
 ```{python}
+#| eval: false
 # Additional arguments will be passed 'as-is' to the
 # downstream R function in this example, to ollama::chat()
 reviews.llm.use("ollama", "llama3.2", options = dict(seed = 100, temperature = 0.1))
 ```
 
 ```{python}
+#| eval: false
 # During the Python session, you can change any argument
 # individually and it will retain all of previous
 # arguments used
@@ -291,25 +289,28 @@ reviews.llm.use(options = dict(temperature = 0.3))
 ```
 
 ```{python}
+#| eval: false
 # Use _cache to modify the target folder for caching
 reviews.llm.use(_cache = "_my_cache")
 ```
 
 ```{python}
+#| eval: false
 # Leave _cache empty to turn off this functionality
 reviews.llm.use(_cache = "")
 ```
 
 ```{python}
+#| eval: false
 # Use a `chatlas` object
 from chatlas import ChatOpenAI
 chat = ChatOpenAI()
 reviews.llm.use(chat)
 ```
 
-### verify { #mall.MallFrame.verify }
+### verify {#mall.MallFrame.verify}
 
-```python
+``` python
 MallFrame.verify(col, what='', yes_no=[1, 0], additional='', pred_name='verify')
 ```
 
@@ -317,13 +318,13 @@ Check to see if something is true about the text.
 
 #### Parameters {.doc-section .doc-section-parameters}
 
-| Name       | Type   | Description                                                                                                                                                                  | Default    |
-|------------|--------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------|
-| col        | str    | The name of the text field to process                                                                                                                                        | _required_ |
-| what       | str    | The statement or question that needs to be verified against the provided text                                                                                                | `''`       |
-| yes_no     | list   | A positional list of size 2, which contains the values to return if true and false. The first position will be used as the 'true' value, and the second as the 'false' value | `[1, 0]`   |
-| pred_name  | str    | A character vector with the name of the new column where the prediction will be placed                                                                                       | `'verify'` |
-| additional | str    | Inserts this text into the prompt sent to the LLM                                                                                                                            | `''`       |
+| Name | Type | Description | Default |
+|--------|--------|------------------------------------------------|--------|
+| col | str | The name of the text field to process | *required* |
+| what | str | The statement or question that needs to be verified against the provided text | `''` |
+| yes_no | list | A positional list of size 2, which contains the values to return if true and false. The first position will be used as the 'true' value, and the second as the 'false' value | `[1, 0]` |
+| pred_name | str | A character vector with the name of the new column where the prediction will be placed | `'verify'` |
+| additional | str | Inserts this text into the prompt sent to the LLM | `''` |
 
 #### Examples {.doc-section .doc-section-examples}
 
